examples/demos/failing/92_fail_parse_unterminated_if.hing
shuru
num a = 7
agar a > 5
bol "ok"
